@@ -1,7 +1,8 @@
-// { dg-do compile { target c++11 } }
+// { dg-options "-std=gnu++2a" }
+// { dg-do compile { target c++2a } }
 // { dg-require-gthreads "" }
 
-// Copyright (C) 2009-2020 Free Software Foundation, Inc.
+// Copyright (C) 2020 Free Software Foundation, Inc.
 //
 // This file is part of the GNU ISO C++ Library.  This library is free
 // software; you can redistribute it and/or modify it under the
@@ -42,4 +43,6 @@ void test01()
   static_assert( check_type<bool, decltype(id1 > id2)>{} );
   static_assert( check_type<bool, decltype(id1 >= id2)>{} );
   static_assert( check_type<bool, decltype(id1 <= id2)>{} );
+
+  static_assert( check_type<std::strong_ordering, decltype(id1 <=> id2)>{} );
 }
